Post-overflow-issue! It is now circumvented through a better solution (allowing wrapping)

--- a/tpclient/src/App.css
+++ b/tpclient/src/App.css
@@ -110,7 +110,6 @@
     margin-left: 10px;
     margin-right: 15px;
     margin-top: 20px;
-    max-width: 100%;
 }
 
 .mer-information-outer {
@@ -175,6 +174,9 @@
     align-items: center;
 }
 
+
+/* ||| */
+
 .food-input-activated {
     width: 100%;
     display: flex;
@@ -183,7 +185,7 @@
 
 .search-results-splitter {
     width: 100%;
-    height: 280px;
+    height: 350px;
     margin-top: 10px;
     display: flex;
     align-items: center;
@@ -195,7 +197,6 @@
     display: flex;
     flex-direction: column;
     padding-left: 10px;
-    width: 50%; /* Already set */
 }
 
 .search-results-title {
@@ -217,32 +218,32 @@
 
 .search-item {
     width: 100%;
-    /* max-width: 222px; */
     height: 12.5%;
     display: flex;
     align-items: center;
-    justify-content: start;
-    padding: 4px;
-    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
-    border-radius: 10px;
+    justify-content: center;
+    padding: 6px;
+    border-bottom: 1px solid lightgray;
+    border-radius: 0px;
     cursor: pointer;
-    white-space: nowrap;
-    overflow: hidden;
+    line-height: 13px;
+    text-align: start;
 }
 
 .search-item-paragraph {
     width: 100%;
     display: flex;
     justify-content: start;
-    mask-image: linear-gradient(to right, black 85%, transparent);
 }
 
 .search-item:hover {
     box-shadow: inset 0 0 0 2px #535bf2;
+    border-radius: 8px;
 }
 
 .search-item:focus-visible {
     box-shadow: inset 0 0 0 2px #535bf2;
+    border-radius: 8px;
 }
 
 .select-page {
@@ -254,6 +255,16 @@
     width: 100%;
     height: 40px;
 }
+
+
+
+/* ||||| */
+
+
+
+
+
+
 
 .matvara {
     border-radius: 20px;
